--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "files.associations": {
         "main.h": "c",
-        "freertos.h": "c"
+        "freertos.h": "c",
+        "tim.h": "c",
+        "exception": "cpp",
+        "stdexcept": "cpp"
     }
 }
